--- a/Decision_Trees.ipynb
+++ b/Decision_Trees.ipynb
@@ -116,8 +116,59 @@
     "    vector.append(len(set(q1).intersection(set(q2)))/237)\n",
     "    return vector\n",
     "\n",
-    "def get_count_without_stopwords(question1, question2, vector):\n",
-    "    "
+    "def get_count_without_lowercased_stopwords(question1, question2, vector):\n",
+    "    q1=[word for word in question1.split() if word.islower() and word not in stop_words]\n",
+    "    q2=[word for word in question2.split() if word.islower() and word not in stop_words]\n",
+    "    vector.append(len(set(q1).intersection(set(q2))))\n",
+    "    vector.append(len(set(q1).intersection(set(q2)))/237)\n",
+    "    return vector\n",
+    "\n",
+    "def same_prefix(question1,question2,vector):\n",
+    "    q1_words = question1.split()\n",
+    "    q2_words = question2.split()\n",
+    "    vector.append(sum([q1_words[:i]==q2_words[:i] for i in range(3)]))\n",
+    "    vector.append(sum([q1_words[:i]==q2_words[:i] for i in range(3)])/237)\n",
+    "    vector.append(sum([q1_words[:i]==q2_words[:i] for i in range(4)]))\n",
+    "    min=len(q1_words) if len(q1_words)<len(q2_words) else len(q2_words)\n",
+    "    vector.append(sum([q1_words[:i]==q2_words[:i] for i in range(4)])/237)\n",
+    "    vector.append(sum([q1_words[:i]==q2_words[:i] for i in range(5)]))\n",
+    "    min=len(q1_words) if len(q1_words)>len(q2_words) else len(q2_words)\n",
+    "    vector.append(sum([q1_words[:i]==q2_words[:i] for i in range(5)])/237)\n",
+    "    vector.append(sum([q1_words[:i]==q2_words[:i] for i in range(6)]))\n",
+    "    vector.append(sum([q1_words[:i]==q2_words[:i] for i in range(6)])/237)\n",
+    "    return vector\n",
+    "\n",
+    "def count_uppercase(question1,question2,vector):\n",
+    "    q1=[word for word in question1.split() if word.isupper()]\n",
+    "    q2=[word for word in question2.split() if word.isupper()]\n",
+    "    vector.append(len(set(q1).intersection(set(q2))))\n",
+    "    vector.append(len(set(q1).intersection(set(q2)))/237)\n",
+    "    return vector\n",
+    "\n",
+    "def misc_features(question1,question2,vector):\n",
+    "    q1=question1.split()\n",
+    "    q2=question2.split()\n",
+    "    # append 'not' in question1\n",
+    "    vector.append(1 if 'not' in q1 else 0)\n",
+    "    # append 'not' in question2\n",
+    "    vector.append(1 if 'not' in q2 else 0)\n",
+    "    #check for digit\n",
+    "    q11=[word for word in q1 if word.isdigit()]\n",
+    "    q22=[word for word in q2 if word.isdigit()]\n",
+    "    vector.append(len(set(q11).intersection(set(q22))))\n",
+    "    vector.append(len(set(q11).intersection(set(q22)))/237)\n",
+    "    return vector\n",
+    "\n",
+    "def create_feature_vector(question1, question2):\n",
+    "    vector = []\n",
+    "    vector = get_length_feature(question1, question2, vector)\n",
+    "    vector = same_last_words(question1, question2, vector)\n",
+    "    vector = get_count_lowercased(question1, question2, vector)\n",
+    "    vector = get_count_without_lowercased_stopwords(question1, question2, vector)\n",
+    "    vector = same_prefix(question1, question2, vector)\n",
+    "    vector = count_uppercase(question1, question2, vector)\n",
+    "    vector = misc_features(question1, question2, vector)\n",
+    "    return vector\n"
    ]
   }
  ],
