--- a/Decision_Trees.ipynb
+++ b/Decision_Trees.ipynb
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tree-Feature engineering"
+    "All Functions"
    ]
   },
   {
@@ -81,94 +81,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mk_dir tree_model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stop_words=set(stopwords.words('english'))\n",
-    "lemmatizer=WordNetLemmatizer()\n",
+    "def pun(text):\n",
+    "    text = re.sub(r'[^\\w\\s]','',text)\n",
+    "    return text\n",
     "\n",
-    "def get_length_feature(question1, question2, vector):\n",
-    "    vector.append(len(question1.split()))\n",
-    "    vector.append(len(question2.split()))\n",
-    "    vector.append(abs(len(question1.split()) - len(question2.split())))\n",
-    "    vector.append(len(question1.split())/len(question2.split()))\n",
-    "    return vector\n",
-    "\n",
-    "def same_last_words(question1, question2, vector):\n",
-    "    q1_words = question1.split()\n",
-    "    q2_words = question2.split()\n",
-    "    if q1_words[-1] == q2_words[-1]:\n",
-    "        vector.append(1)\n",
-    "    else:\n",
-    "        vector.append(0)\n",
-    "    return vector\n",
-    "\n",
-    "def get_count_lowercased(question1, question2, vector):\n",
-    "    q1=[word for word in question1.split() if word.islower()]\n",
-    "    q2=[word for word in question2.split() if word.islower()]\n",
-    "    vector.append(len(set(q1).intersection(set(q2))))\n",
-    "    vector.append(len(set(q1).intersection(set(q2)))/237)\n",
-    "    return vector\n",
-    "\n",
-    "def get_count_without_lowercased_stopwords(question1, question2, vector):\n",
-    "    q1=[word for word in question1.split() if word.islower() and word not in stop_words]\n",
-    "    q2=[word for word in question2.split() if word.islower() and word not in stop_words]\n",
-    "    vector.append(len(set(q1).intersection(set(q2))))\n",
-    "    vector.append(len(set(q1).intersection(set(q2)))/237)\n",
-    "    return vector\n",
-    "\n",
-    "def same_prefix(question1,question2,vector):\n",
-    "    q1_words = question1.split()\n",
-    "    q2_words = question2.split()\n",
-    "    vector.append(sum([q1_words[:i]==q2_words[:i] for i in range(3)]))\n",
-    "    vector.append(sum([q1_words[:i]==q2_words[:i] for i in range(3)])/237)\n",
-    "    vector.append(sum([q1_words[:i]==q2_words[:i] for i in range(4)]))\n",
-    "    min=len(q1_words) if len(q1_words)<len(q2_words) else len(q2_words)\n",
-    "    vector.append(sum([q1_words[:i]==q2_words[:i] for i in range(4)])/237)\n",
-    "    vector.append(sum([q1_words[:i]==q2_words[:i] for i in range(5)]))\n",
-    "    min=len(q1_words) if len(q1_words)>len(q2_words) else len(q2_words)\n",
-    "    vector.append(sum([q1_words[:i]==q2_words[:i] for i in range(5)])/237)\n",
-    "    vector.append(sum([q1_words[:i]==q2_words[:i] for i in range(6)]))\n",
-    "    vector.append(sum([q1_words[:i]==q2_words[:i] for i in range(6)])/237)\n",
-    "    return vector\n",
-    "\n",
-    "def count_uppercase(question1,question2,vector):\n",
-    "    q1=[word for word in question1.split() if word.isupper()]\n",
-    "    q2=[word for word in question2.split() if word.isupper()]\n",
-    "    vector.append(len(set(q1).intersection(set(q2))))\n",
-    "    vector.append(len(set(q1).intersection(set(q2)))/237)\n",
-    "    return vector\n",
-    "\n",
-    "def misc_features(question1,question2,vector):\n",
-    "    q1=question1.split()\n",
-    "    q2=question2.split()\n",
-    "    # append 'not' in question1\n",
-    "    vector.append(1 if 'not' in q1 else 0)\n",
-    "    # append 'not' in question2\n",
-    "    vector.append(1 if 'not' in q2 else 0)\n",
-    "    #check for digit\n",
-    "    q11=[word for word in q1 if word.isdigit()]\n",
-    "    q22=[word for word in q2 if word.isdigit()]\n",
-    "    vector.append(len(set(q11).intersection(set(q22))))\n",
-    "    vector.append(len(set(q11).intersection(set(q22)))/237)\n",
-    "    return vector\n",
-    "\n",
-    "def create_feature_vector(question1, question2):\n",
-    "    vector = []\n",
-    "    vector = get_length_feature(question1, question2, vector)\n",
-    "    vector = same_last_words(question1, question2, vector)\n",
-    "    vector = get_count_lowercased(question1, question2, vector)\n",
-    "    vector = get_count_without_lowercased_stopwords(question1, question2, vector)\n",
-    "    vector = same_prefix(question1, question2, vector)\n",
-    "    vector = count_uppercase(question1, question2, vector)\n",
-    "    vector = misc_features(question1, question2, vector)\n",
-    "    return vector\n"
+    "def clean_dataset(df):\n",
+    "    #drop na\n",
+    "    df.dropna(inplace=True)\n",
+    "    indices_to_keep=~df.isin([np.nan, np.inf, -np.inf]).any(1)\n",
+    "    df=df[indices_to_keep].astype(np.float64)\n",
+    "    return df\n",
+    "\n"
    ]
   }
  ],
