--- a/Decision_Trees.ipynb
+++ b/Decision_Trees.ipynb
@@ -91,6 +91,90 @@
     "    indices_to_keep=~df.isin([np.nan, np.inf, -np.inf]).any(1)\n",
     "    df=df[indices_to_keep].astype(np.float64)\n",
     "    return df\n",
+    "\n",
+    "def length(text):\n",
+    "    return len(text)\n",
+    "\n",
+    "def diff_length(text1, text2):\n",
+    "    return abs(len(text1) - len(text2))\n",
+    "\n",
+    "def len_ratio(text1,text2):\n",
+    "    return float(len(text1)/len(text2))\n",
+    "\n",
+    "def com_low(text):\n",
+    "    text1=text[0]\n",
+    "    text2=text[1]\n",
+    "    #split text1 and 2\n",
+    "    text1=text1.split()\n",
+    "    text2=text2.split()\n",
+    "    #check for lower case\n",
+    "    test1_low=set()\n",
+    "    test2_low=set()\n",
+    "    # check if the word is lower case or not\n",
+    "    for word in text1:\n",
+    "        if word.islower():\n",
+    "            test1_low.add(word)\n",
+    "    for word in text2:\n",
+    "        if word.islower():\n",
+    "            test2_low.add(word)\n",
+    "    #check for common lower case words\n",
+    "    common_low=test1_low.intersection(test2_low)\n",
+    "    return len(list(common_low))\n",
+    "\n",
+    "def stop(text):\n",
+    "    text1=text[0]\n",
+    "    text2=text[1]\n",
+    "    #split text1 and 2\n",
+    "    text1=text1.split()\n",
+    "    text2=text2.split()\n",
+    "    #check for stop words\n",
+    "    test1_stop=set()\n",
+    "    test2_stop=set()\n",
+    "    # check if the word is stop word or not\n",
+    "    for word in text1:\n",
+    "        if word in stopwords.words('english'):\n",
+    "            test1_stop.add(word)\n",
+    "    for word in text2:\n",
+    "        if word in stopwords.words('english'):\n",
+    "            test2_stop.add(word)\n",
+    "    #check for common stop words\n",
+    "    common_stop=test1_stop.intersection(test2_stop)\n",
+    "    return len(list(common_stop))\n",
+    "\n",
+    "def last(text):\n",
+    "    text1=text[0]\n",
+    "    text2=text[1]\n",
+    "    #split text1 and 2\n",
+    "    text1=text1.split()\n",
+    "    text2=text2.split()\n",
+    "    #check for last word\n",
+    "    if text1[-1]==text2[-1]:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "def com_cap(text):\n",
+    "    text1=text[0]\n",
+    "    text2=text[1]\n",
+    "    #split text1 and 2\n",
+    "    text1=text1.split()\n",
+    "    text2=text2.split()\n",
+    "    #check for common capital words\n",
+    "    test1_cap=set()\n",
+    "    test2_cap=set()\n",
+    "    # check if the word is capital or not\n",
+    "    for word in text1:\n",
+    "        if word.isupper():\n",
+    "            test1_cap.add(word)\n",
+    "    for word in text2:\n",
+    "        if word.isupper():\n",
+    "            test2_cap.add(word)\n",
+    "    #check for common capital words\n",
+    "    common_cap=test1_cap.intersection(test2_cap)\n",
+    "    return len(list(common_cap))\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   }
