--- a/Decision_Trees.ipynb
+++ b/Decision_Trees.ipynb
@@ -173,6 +173,86 @@
     "    common_cap=test1_cap.intersection(test2_cap)\n",
     "    return len(list(common_cap))\n",
     "\n",
+    "def pre(text,n):\n",
+    "    text1=text[0]\n",
+    "    text2=text[1]\n",
+    "    #split text1 and 2\n",
+    "    text1=text1.split()\n",
+    "    text2=text2.split()\n",
+    "    #check for common prefix\n",
+    "    test1_pre=set()\n",
+    "    test2_pre=set()\n",
+    "    # check if the word is prefix or not\n",
+    "    for word in text1:\n",
+    "        if word[:n]==text2[0][:n]:\n",
+    "            test1_pre.add(word)\n",
+    "    for word in text2:\n",
+    "        if word[:n]==text1[0][:n]:\n",
+    "            test2_pre.add(word)\n",
+    "    #check for common prefix\n",
+    "    common_pre=test1_pre.intersection(test2_pre)\n",
+    "    return len(list(common_pre))\n",
+    "\n",
+    "\n",
+    "def misc1(text):\n",
+    "    #check if not is present of not\n",
+    "    text=text.split()\n",
+    "    if 'not' in text:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0\n",
+    "    \n",
+    "def misc2(text):\n",
+    "    text1=text[0]\n",
+    "    text2=text[1]\n",
+    "    #split text1 and 2\n",
+    "    text1=text1.split()\n",
+    "    text2=text2.split()\n",
+    "    #check is not is present in both\n",
+    "    if 'not' in text1 and 'not' in text2:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "def misc3(text):\n",
+    "    text1=text[0]\n",
+    "    text2=text[1]\n",
+    "    #split text1 and 2\n",
+    "    text1=text1.split()\n",
+    "    text2=text2.split()\n",
+    "    #check if word is in digit and is in text2 as well\n",
+    "    for word in text1:\n",
+    "        if word.isdigit():\n",
+    "            if word in text2:\n",
+    "                return 1\n",
+    "    return 0\n",
+    "\n",
+    "def misc4(text):\n",
+    "    text1=text[0]\n",
+    "    text2=text[1]\n",
+    "    ps=PorterStemmer()\n",
+    "    #tokenize word1 and word2\n",
+    "    text1=text1.split()\n",
+    "    text2=text2.split()\n",
+    "    text_s1=[]\n",
+    "    text_s2=[]\n",
+    "    #stemming\n",
+    "    for word in text1:\n",
+    "        text_s1.append(ps.stem(word))\n",
+    "    for word in text2:\n",
+    "        text_s2.append(ps.stem(word))\n",
+    "    text1_low=set()\n",
+    "    text2_low=set()\n",
+    "    # check if the word is lower case or not\n",
+    "    for word in text_s1:\n",
+    "        if word.islower():\n",
+    "            text1_low.add(word)\n",
+    "    for word in text_s2:\n",
+    "        if word.islower():\n",
+    "            text2_low.add(word)\n",
+    "    #check for common lower case words\n",
+    "    common_low=text1_low.intersection(text2_low)\n",
+    "    return len(list(common_low))\n",
     "\n",
     "\n",
     "\n"
