--- a/Decision_Trees.ipynb
+++ b/Decision_Trees.ipynb
@@ -16,18 +16,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'matplotlib'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/Users/sarthak/Desktop/SMAI_Project/Decision_Trees.ipynb Cell 3\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sarthak/Desktop/SMAI_Project/Decision_Trees.ipynb#W3sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sarthak/Desktop/SMAI_Project/Decision_Trees.ipynb#W3sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/sarthak/Desktop/SMAI_Project/Decision_Trees.ipynb#W3sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sarthak/Desktop/SMAI_Project/Decision_Trees.ipynb#W3sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mseaborn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msns\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sarthak/Desktop/SMAI_Project/Decision_Trees.ipynb#W3sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mre\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: nltk in /Users/sarthak/.pyenv/versions/3.9.13/lib/python3.9/site-packages (3.7)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in /Users/sarthak/.pyenv/versions/3.9.13/lib/python3.9/site-packages (from nltk) (2022.10.31)\n",
+      "Requirement already satisfied: click in /Users/sarthak/.pyenv/versions/3.9.13/lib/python3.9/site-packages (from nltk) (8.1.3)\n",
+      "Requirement already satisfied: joblib in /Users/sarthak/.pyenv/versions/3.9.13/lib/python3.9/site-packages (from nltk) (1.2.0)\n",
+      "Requirement already satisfied: tqdm in /Users/sarthak/.pyenv/versions/3.9.13/lib/python3.9/site-packages (from nltk) (4.64.1)\n",
+      "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 22.3.1 is available.\n",
+      "You should consider upgrading via the '/Users/sarthak/.pyenv/versions/3.9.13/bin/python3.9 -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/sarthak/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
    ],
@@ -36,11 +58,11 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "import re\n",
     "import nltk\n",
+    "nltk.download('stopwords')\n",
     "from nltk.corpus import stopwords\n",
-    "from nltk.stem import WordNetLemmatizer\n",
+    "from nltk.stem import PorterStemmer\n",
     "from nltk.tokenize import word_tokenize\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -77,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,27 +150,38 @@
     "    text1=text1.split()\n",
     "    text2=text2.split()\n",
     "    #check for stop words\n",
-    "    test1_stop=set()\n",
-    "    test2_stop=set()\n",
+    "    text1_low=set()\n",
+    "    text2_low=set()\n",
+    "    stop_words=set(stopwords.words('english'))\n",
     "    # check if the word is stop word or not\n",
     "    for word in text1:\n",
-    "        if word in stopwords.words('english'):\n",
-    "            test1_stop.add(word)\n",
+    "        #checkif word is lower case\n",
+    "        if word.islower():\n",
+    "            text1_low.add(word)\n",
+    "    \n",
+    "    text1=list(text1_low)\n",
     "    for word in text2:\n",
-    "        if word in stopwords.words('english'):\n",
-    "            test2_stop.add(word)\n",
+    "        #check if word is lower case\n",
+    "        if word.islower():\n",
+    "            text2_low.add(word)\n",
+    "    text2=list(text2_low)\n",
+    "    #check for lowercase as well as stop_words\n",
+    "    text1=[w for w in text1 if not w.lower() in stop_words]\n",
+    "    text2=[w for w in text2 if not w.lower() in stop_words]\n",
+    "    text1=set(text1)\n",
+    "    text2=set(text2)\n",
     "    #check for common stop words\n",
-    "    common_stop=test1_stop.intersection(test2_stop)\n",
+    "    common_stop=text1.intersection(text2)\n",
     "    return len(list(common_stop))\n",
     "\n",
     "def last(text):\n",
     "    text1=text[0]\n",
     "    text2=text[1]\n",
     "    #split text1 and 2\n",
-    "    text1=text1.split()\n",
-    "    text2=text2.split()\n",
+    "    text1=list(text1.split(\" \"))\n",
+    "    text2=list(text2.split(\" \"))\n",
     "    #check for last word\n",
-    "    if text1[-1]==text2[-1]:\n",
+    "    if text1[len(list(text1))-1]==text2[len(list(text2))-1]:\n",
     "        return 1\n",
     "    else:\n",
     "        return 0\n",
@@ -180,19 +213,34 @@
     "    text1=text1.split()\n",
     "    text2=text2.split()\n",
     "    #check for common prefix\n",
-    "    test1_pre=set()\n",
-    "    test2_pre=set()\n",
-    "    # check if the word is prefix or not\n",
-    "    for word in text1:\n",
-    "        if word[:n]==text2[0][:n]:\n",
-    "            test1_pre.add(word)\n",
-    "    for word in text2:\n",
-    "        if word[:n]==text1[0][:n]:\n",
-    "            test2_pre.add(word)\n",
-    "    #check for common prefix\n",
-    "    common_pre=test1_pre.intersection(test2_pre)\n",
-    "    return len(list(common_pre))\n",
-    "\n",
+    "    str1=text1\n",
+    "    str2=text2\n",
+    "    str1.sort()\n",
+    "    i=0\n",
+    "    j=0\n",
+    "    str2.sort()\n",
+    "    ans = 0\n",
+    "    while True:\n",
+    "        if i >= len(str1) or j >= len(str2):\n",
+    "            break\n",
+    "        if len(str1[i]) < n:\n",
+    "            i += 1\n",
+    "            continue\n",
+    "        if len(str2[j]) < n:\n",
+    "            j += 1\n",
+    "            continue\n",
+    "        s1 = str1[i][0:n]\n",
+    "        s2 = str2[j][0:n]\n",
+    "        if s1 == s2:\n",
+    "            ans += 1\n",
+    "            i += 1 \n",
+    "            j += 1 \n",
+    "        else:\n",
+    "            if str1[i]>str2[j]:\n",
+    "                j += 1\n",
+    "            else:\n",
+    "                i += 1\n",
+    "    return ans\n",
     "\n",
     "def misc1(text):\n",
     "    #check if not is present of not\n",
@@ -252,10 +300,251 @@
     "            text2_low.add(word)\n",
     "    #check for common lower case words\n",
     "    common_low=text1_low.intersection(text2_low)\n",
-    "    return len(list(common_low))\n",
+    "    return len(list(common_low))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importing the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(\"./train.csv\")\n",
+    "data = data.dropna(how=\"any\").reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>qid1</th>\n",
+       "      <th>qid2</th>\n",
+       "      <th>question1</th>\n",
+       "      <th>question2</th>\n",
+       "      <th>is_duplicate</th>\n",
+       "      <th>l1</th>\n",
+       "      <th>l2</th>\n",
+       "      <th>l3</th>\n",
+       "      <th>l4</th>\n",
+       "      <th>lc1</th>\n",
+       "      <th>lc2</th>\n",
+       "      <th>lcxs_1</th>\n",
+       "      <th>lxcs_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>What is the step by step guide to invest in sh...</td>\n",
+       "      <td>What is the step by step guide to invest in sh...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>65</td>\n",
+       "      <td>56</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1.160714</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.008850</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.004425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>What is the story of Kohinoor KohiNoor Diamond</td>\n",
+       "      <td>What would happen if the Indian government sto...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>83</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0.554217</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000885</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>How can I increase the speed of my internet co...</td>\n",
+       "      <td>How can Internet speed be increased by hacking...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>72</td>\n",
+       "      <td>58</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1.241379</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.001770</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000885</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Why am I mentally very lonely How can I solve it</td>\n",
+       "      <td>Find the remainder when math2324math is divide...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>48</td>\n",
+       "      <td>55</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.872727</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Which one dissolve in water quikly sugar salt ...</td>\n",
+       "      <td>Which fish would survive in salt water</td>\n",
+       "      <td>0</td>\n",
+       "      <td>73</td>\n",
+       "      <td>38</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1.921053</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.002655</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.001770</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  qid1  qid2                                          question1  \\\n",
+       "0   0     1     2  What is the step by step guide to invest in sh...   \n",
+       "1   1     3     4     What is the story of Kohinoor KohiNoor Diamond   \n",
+       "2   2     5     6  How can I increase the speed of my internet co...   \n",
+       "3   3     7     8   Why am I mentally very lonely How can I solve it   \n",
+       "4   4     9    10  Which one dissolve in water quikly sugar salt ...   \n",
+       "\n",
+       "                                           question2  is_duplicate  l1  l2  \\\n",
+       "0  What is the step by step guide to invest in sh...             0  65  56   \n",
+       "1  What would happen if the Indian government sto...             0  46  83   \n",
+       "2  How can Internet speed be increased by hacking...             0  72  58   \n",
+       "3  Find the remainder when math2324math is divide...             0  48  55   \n",
+       "4             Which fish would survive in salt water             0  73  38   \n",
+       "\n",
+       "   l3        l4  lc1       lc2  lcxs_1    lxcs_2  \n",
+       "0   9  1.160714   10  0.008850       5  0.004425  \n",
+       "1  37  0.554217    1  0.000885       0  0.000000  \n",
+       "2  14  1.241379    2  0.001770       1  0.000885  \n",
+       "3   7  0.872727    0  0.000000       0  0.000000  \n",
+       "4  35  1.921053    3  0.002655       2  0.001770  "
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#apply pun function\n",
+    "data['question1']=data['question1'].apply(pun)\n",
+    "data['question2']=data['question2'].apply(pun)\n",
+    "#apply lenght function\n",
+    "data['l1']=data['question1'].apply(length)\n",
+    "data['l2']=data['question2'].apply(length)\n",
+    "#apply diff_length function\n",
+    "data['l3']=abs(data['l1']-data['l2'])\n",
+    "#apply len_ratio function\n",
+    "data['l4']=(data['l1']/data['l2'])\n",
+    "#copy data in to data_l\n",
+    "data_l=data.copy()\n",
+    "#apply com_low function\n",
+    "data['lc1']=data[['question1','question2']].apply(com_low,axis=1)\n",
     "\n",
+    "sen1=data['question1'].str.len().idxmax()\n",
+    "sen2=data['question2'].str.len().idxmax()\n",
+    "#get the longest sentence\n",
+    "l1=len(data['question1'][sen1])\n",
+    "l2=len(data['question2'][sen2])\n",
+    "#get max between l1 and l2\n",
+    "l=max(l1,l2)\n",
+    "data['lc2']=data[['question1','question2']].apply(com_low,axis=1)\n",
+    "data['lc2']=data['lc2']/l\n",
+    "#copy data in to data_2\n",
+    "data_2=data.copy()\n",
+    "data['lcxs_1']=data[['question1','question2']].apply(lambda x:stop(x),axis=1)\n",
+    "data['lxcs_2']=(data['lcxs_1'])/l\n",
+    "#copy data in to data_3\n",
+    "data_3=data.copy()\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['lw_1']=data[['question1','question2']].apply(last,axis=1)\n",
+    "data_4=data.copy()\n",
+    "data['cap_1']=data[['question1','question2']].apply(com_cap,axis=1)\n",
+    "data['cap_2']=data['cap_1']/l\n",
+    "data_5=data.copy()\n",
     "\n",
-    "\n"
+    "#apply all the prefix function\n",
+    "data['pre_1']=data[['question1','question2']].apply(lambda x:pre(x,3),axis=1)\n",
+    "data['pre_3']=data[['question1','question2']].apply(lambda x:pre(x,4),axis=1)\n",
+    "data['pre_5']=data[['question1','question2']].apply(lambda x:pre(x,5),axis=1)\n",
+    "data['pre_7']=data[['question1','question2']].apply(lambda x:pre(x,6),axis=1)\n",
+    "data['pre_2']=data['pre_1']/l\n",
+    "data['pre_4']=data['pre_3']/l\n",
+    "data['pre_6']=data['pre_5']/l\n",
+    "data['pre_8']=data['pre_7']/l\n",
+    "data_6=data.copy()\n",
+    "\n",
+    "#apply all the misc function\n",
+    "data['misc1'] = data['question1'].apply(misc1)\n",
+    "data['misc2'] = data['question2'].apply(misc1)\n",
+    "\n",
+    "data['misc3'] = data[['question1','question2']].apply(misc2,axis=1)\n",
+    "data['misc4'] = data[['question1','question2']].apply(misc3,axis=1)\n",
+    "data['misc5']= data[['question1','question2']].apply(lambda x:misc4(x),axis=1)\n",
+    "data_7=data.copy()"
    ]
   }
  ],
