--- a/Decision_Trees.ipynb
+++ b/Decision_Trees.ipynb
@@ -1048,11 +1048,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/y4/yphzsd_j3hbd5rzqwpdq7x9m0000gn/T/ipykernel_28679/593163608.py:8: FutureWarning: In a future version of pandas all arguments of DataFrame.any and Series.any will be keyword-only.\n",
+      "  indices_to_keep=~df.isin([np.nan, np.inf, -np.inf]).any(1)\n"
+     ]
+    }
+   ],
    "source": [
-    "data6 = data_6.dropna(axis=0, how='any', thresh=None, subset=None, inplace=False)\n",
+    "data6 = data_6.dropna(axis=0, how='any', subset=None, inplace=False)\n",
     "data6.drop(['id', 'qid1', 'qid2', 'question1', 'question2'], inplace=True,axis=1)\n",
     "clean_dataset(data6)\n",
     "y_6 = data6['is_duplicate']\n",
@@ -1070,9 +1079,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7195577432041357\n",
+      "F1 score: 0.6162334145681018\n"
+     ]
+    }
+   ],
    "source": [
     "dt=DecisionTreeClassifier(max_depth=10,min_samples_leaf=10)\n",
     "x_train_6 = x_train_6.replace((np.inf, -np.inf, np.nan), 0).reset_index(drop=True)\n",
@@ -1094,9 +1112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7328402879121423\n",
+      "F1 score: 0.6233829631437637\n"
+     ]
+    }
+   ],
    "source": [
     "rf=RandomForestClassifier(n_estimators=100,max_depth=30,min_samples_leaf=100)\n",
     "rf.fit(x_train_6,y_train_6)\n",
@@ -1115,9 +1142,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7408296025130475\n",
+      "F1 score: 0.644355440906931\n"
+     ]
+    }
+   ],
    "source": [
     "gb=GradientBoostingClassifier(n_estimators=500,max_depth=10,min_samples_leaf=100)\n",
     "gb.fit(x_train_6,y_train_6)\n",
@@ -1125,6 +1161,130 @@
     "print(\"Accuracy:\",accuracy_score(y_test_6, y_pred_6))\n",
     "#print f1 score\n",
     "print(\"F1 score:\",f1_score(y_test_6, y_pred_6))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Misc Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/y4/yphzsd_j3hbd5rzqwpdq7x9m0000gn/T/ipykernel_28679/593163608.py:8: FutureWarning: In a future version of pandas all arguments of DataFrame.any and Series.any will be keyword-only.\n",
+      "  indices_to_keep=~df.isin([np.nan, np.inf, -np.inf]).any(1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data7 = data_7.dropna(axis=0, how='any', subset=None, inplace=False)\n",
+    "data7.drop(['id', 'qid1', 'qid2', 'question1', 'question2'], inplace=True,axis=1)\n",
+    "clean_dataset(data7)\n",
+    "y_7 = data7['is_duplicate']\n",
+    "data7.drop('is_duplicate', inplace=True,axis=1)\n",
+    "x_train_7, x_test_7, y_train_7, y_test_7 = train_test_split(data7, y_7,  test_size=0.30, random_state=25)\n",
+    "x_val_7, x_test_7, y_val_7, y_test_7 = train_test_split(x_test_7, y_test_7 ,test_size=float(1/3), random_state=25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7250488510722501\n",
+      "F1 score: 0.6162132302168208\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt=DecisionTreeClassifier(max_depth=10,min_samples_leaf=10)\n",
+    "x_train_7 = x_train_7.replace((np.inf, -np.inf, np.nan), 0).reset_index(drop=True)\n",
+    "y_train_7 = y_train_7.replace((np.inf, -np.inf, np.nan), 0).reset_index(drop=True)\n",
+    "x_val_7 = x_val_7.replace((np.inf, -np.inf, np.nan), 0).reset_index(drop=True)\n",
+    "dt.fit(x_train_7,y_train_7)\n",
+    "y_pred_7=dt.predict(x_test_7)\n",
+    "print(\"Accuracy:\",accuracy_score(y_test_7, y_pred_7))\n",
+    "#print f1 score\n",
+    "print(\"F1 score:\",f1_score(y_test_7, y_pred_7))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7365257612110119\n",
+      "F1 score: 0.6277346753337527\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf=RandomForestClassifier(n_estimators=100,max_depth=30,min_samples_leaf=100)\n",
+    "rf.fit(x_train_7,y_train_7)\n",
+    "y_pred_7=rf.predict(x_test_7)\n",
+    "print(\"Accuracy:\",accuracy_score(y_test_7, y_pred_7))\n",
+    "#print f1 score\n",
+    "print(\"F1 score:\",f1_score(y_test_7, y_pred_7))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Gradient Boosted Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7482500185510401\n",
+      "F1 score: 0.6595758913639708\n"
+     ]
+    }
+   ],
+   "source": [
+    "gb=GradientBoostingClassifier(n_estimators=500,max_depth=10,min_samples_leaf=100)\n",
+    "gb.fit(x_train_7,y_train_7)\n",
+    "y_pred_7=gb.predict(x_test_7)\n",
+    "print(\"Accuracy:\",accuracy_score(y_test_7, y_pred_7))\n",
+    "#print f1 score\n",
+    "print(\"F1 score:\",f1_score(y_test_7, y_pred_7))"
    ]
   }
  ],
